--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bulma": "^0.9.3",
+    "i": "^0.3.7",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
+    "react-bulma-components": "^4.1.0",
+    "react-bulma-ui-elements": "^0.1.3",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
